--- a/autoMATE_Node/.classpath
+++ b/autoMATE_Node/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/pi4j-core.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-device.jar"/>
 	<classpathentry kind="lib" path="lib/pi4j-gpio-extension.jar"/>
+	<classpathentry kind="lib" path="lib/bluecove-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
